--- a/test.html
+++ b/test.html
@@ -3,31 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Colmar Academy</title>
-    <link rel="stylesheet" href="./resources/css/styles.css">
+    <title>Document</title>
+    <link rel="stylesheet" href="./resources/css/test.css">
 </head>
 <body>
     <header>
         <div class="logo">
             <img src="./resources/images/ic-logo.svg" alt="Colmar Academy">
-            <h1 class="page-font">COLMAR<span>ACADEMY</span></h1>
+            <h1>COLMAR<span>ACADEMY</span></h1>
         </div>
         <div class="nav-links">
-            <ul class="page-font">
+            <ul>
                 <li><a href="#">On Campus</a></li>
                 <li><a href="#">Online</a></li>
                 <li><a href="#">For Companies</a></li>
                 <li><a href="#">Sign In</a></li>
             </ul>
         </div>
-    </header>
+    </header> 
     <main>
         <section class="banner">
             <div class="banner-container">
                 <img href="#" src="./resources/images/banner.jpg" alt="banner">
             </div>
             <div>
-                <div class="page-font sign-up">
+                <div class="sign-up">
                     <h1>Learn something new every day</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <button>Start here</button>
