Delete test html and css. Delivered by accident.

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
                 </div>
             </div>
         </section>
+        <section class="practice">
+
+        </section>
     </main>
 </body>
 </html>
