--- a/index.html
+++ b/index.html
@@ -34,9 +34,55 @@
                 </div>
             </div>
         </section>
-        <section class="practice">
-
+        
+        <section class="information">
+            <div class="left-main">
+                <div class="left-image">
+                    <img src="./resources/images/information-main.jpg" alt="Student Reading">
+                </div>
+                <div class="page-font left-text">
+                    <h2>It doesn't hurt to keep practicing</h2>
+                    <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus,
+                        nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam
+                        egat magna laoteet, efficitur dolor consequat, tristique ligula.""
+                    </p>
+                    <p>Emanuel, Sr Strategist at Hiring.com</p>
+                </div>
+            </div>
+            <div class="info-container">
+                <div class="info-item">
+                    <div class="info-image">
+                        <img src="./resources/images/information-orientation.jpg" alt="Information 1">
+                    </div>
+                    <div class="page-font info-text">
+                        <h3>Orientation date</h3>
+                        <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+                        <a class="info-link" href="#">Read more</a>
+                    </div>
+                </div>
+                <div class="info-item">
+                    <div class="info-image">
+                        <img src="./resources/images/information-campus.jpg" alt="Information 1">
+                    </div>
+                    <div class="page-font info-text">
+                        <h3>Our Campus</h3>
+                        <p>Find which campus is close to you</p>
+                        <a class="info-link" href="#">Read more</a>
+                    </div>
+                </div>
+                <div class="info-item">
+                    <div class="info-image">
+                        <img src="./resources/images/information-guest-lecture.jpg" alt="Information 1">
+                    </div>
+                    <div class="page-font info-text">
+                        <h3>Our guest lecture</h3>
+                        <p>Join a keynote with Oliver Sack about music in medical treatment</p>
+                        <a class="info-link" href="#">Read more</a>
+                    </div>
+                </div>
+            </div>
         </section>
+    
     </main>
 </body>
 </html>
