--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </section>
         
         <section class="information">
-            <div class="left-main">
+            <div class="left-main left-item-width">
                 <div class="left-image">
                     <img src="./resources/images/information-main.jpg" alt="Student Reading">
                 </div>
@@ -82,7 +82,71 @@
                 </div>
             </div>
         </section>
-    
+        <section id="courses-section">
+            <h1>Start Learning</h1>
+            <div id="courses">
+                <div class="left-main courses-item-width">
+                    <div class="left-image">
+                        <img src="./resources/images/course-software.jpg" alt="A computer monitor">
+                    </div>
+                    <div class="page-font left-text">
+                        <h2>Software Engineering</h2>
+                        <h3>COURSES</h3>
+                        <p>Web Development, Mobile Development, iOT, APIs</p>
+                    </div>
+                </div>
+                <div class="left-main courses-item-width">
+                    <div class="left-image">
+                        <img src="./resources/images/course-computer-art.jpg" alt="A hand holding a mobile">
+                    </div>
+                    <div class="page-font left-text">
+                        <h2>Computer Art</h2>
+                        <h3>COURSES</h3>
+                        <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+                    </div>
+                </div>
+                <div class="left-main courses-item-width">
+                    <div class="left-image">
+                        <img src="./resources/images/course-design.jpg" alt="A computer monitor">
+                    </div>
+                    <div class="page-font left-text">
+                        <h2>Design</h2>
+                        <h3>COURSES</h3>
+                        <p>User Experience Design, User Research, Visual Design</p>
+                    </div>
+                </div>
+                <div class="left-main courses-item-width">
+                    <div class="left-image">
+                        <img src="./resources/images/course-data.jpg" alt="An open laptop">
+                    </div>
+                    <div class="page-font left-text">
+                        <h2>Data</h2>
+                        <h3>COURSES</h3>
+                        <p>Data Science, Big Data, SQL, Data Visualization</p>
+                    </div>
+                </div>
+                <div class="left-main courses-item-width">
+                    <div class="left-image">
+                        <img src="./resources/images/course-business.jpg" alt="A chess set">
+                    </div>
+                    <div class="page-font left-text">
+                        <h2>Business</h2>
+                        <h3>COURSES</h3>
+                        <p>Product Development, Business Development, Startup</p>
+                    </div>
+                </div>
+                <div class="left-main courses-item-width">
+                    <div class="left-image">
+                        <img src="./resources/images/course-marketing.jpg" alt="An electronic watch">
+                    </div>
+                    <div class="page-font left-text">
+                        <h2>Marketing</h2>
+                        <h3>COURSES</h3>
+                        <p>Analytics, Content Marketing, Mobile Marketing</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
