Added footer and Thesis section. Requires refactoring.

--- a/index.html
+++ b/index.html
@@ -147,6 +147,54 @@
                 </div>
             </div>
         </section>
+        <section id="thesis-section">
+            <h1>Thesis Exhibit</h1>
+            <div class="information">
+                <div class="left-main left-item-width">
+                    <div class="left-video">
+                        <video src="./resources/videos/thesis.mp4" controls>Can't load video"</video>
+                    </div>
+                    <div class="page-font left-text">
+                        <h2>Reimagine urban</h2>
+                        <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus,
+                            nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam
+                            egat magna laoteet, efficitur dolor consequat, tristique ligula."
+                        </p>
+                    </div>
+                </div>
+                <div class="info-container">
+                    <div class="info-item">
+                        <div class="info-image">
+                            <img src="./resources/images/thesis-fisma.jpg" alt="Fisma Thesis">
+                        </div>
+                        <div class="page-font info-text">
+                            <h3>Fisma: Design and Prototype</h3>
+                            <p>Designer showcase of new prototype product</p>
+                        </div>
+                    </div>
+                    <div class="info-item">
+                        <div class="info-image">
+                            <img src="./resources/images/thesis-now-and-then.jpg" alt="New York">
+                        </div>
+                        <div class="page-font info-text">
+                            <h3>Now and then</h3>
+                            <p>Research study about New York</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
+    <footer class="footer-container">
+            <div class="copy-right">
+                <p>&copy; 2016 Colmar Academy. All rights reserved</p>
+            </div>
+            <div class="footer-links">
+                <ul>
+                    <li><a href="#">terms</a></li>
+                    <li><a href="#">Privacy</a></li>
+                </ul>
+            </div>
+    </footer>
 </body>
 </html>
